--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@react-three/drei": "^9.86.3",
     "@react-three/fiber": "^8.14.4",
     "@react-three/postprocessing": "^2.15.1",
+    "gltfjsx": "^6.2.13",
     "leva": "^0.9.35",
     "meshline": "^3.1.6",
     "react": "^18.2.0",
